feat: add specific device ws communication
